--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   },
   "homepage": "https://github.com/TongVanHinh/node-js-basic#readme",
   "dependencies": {
+    "app-root-path": "3.0.0",
     "body-parser": "1.19.0",
     "dotenv": "10.0.0",
     "ejs": "3.1.6",
     "express": "4.17.1",
+    "multer": "1.4.3",
     "mysql2": "2.3.0"
   },
   "devDependencies": {
